--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
 project(lanedet LANGUAGES CXX CUDA)
-enable_language(CUDA)
 
 include(cmake/modules/FindNCCL.cmake)
 list(APPEND CMAKE_MODULE_PATH ${lanedet_SOURCE_DIR}/cmake/modules)
 
 find_package(OpenCV REQUIRED)
-find_package(CUDA REQUIRED)
 find_package(NCCL REQUIRED)
 
 set(CMAKE_CUDA_FLAGS "-std=c++11")
@@ -25,7 +23,7 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)
 
 include_directories(include
     ${OpenCV_INCLUDE_DIRS}
-    ${CUDA_INCLUDE_DIRS}
+    ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}
     ${NCCL_INCLUDE_DIR})
 
 add_subdirectory(src)
